Changes for 1.4.7:

 - [ZBX-675] fixed wrong result of function "nodata" after server restart (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers(Sasha)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)
 - [ZBX-604] fixed compilation problems under AIX 2.5.1 (Sasha)
 - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)
 - [ZBX-450] fixed showing status of items in maps for non english locale (Sasha)
 - [ZBX-432] set trigger value to unknown if changed item status (Sahsa)
 - [DEV-198] improved displaying of disabled items in the maps (Sasha)
 - [ZBX-430] improved configuration scripts (Sasha)
 - [ZBX-103] fixed escaping in sql queries (Sasha)
 - [ZBX-424] fixed possible server crash while importing XML (Sasha)
 - [ZBX-420] added support of log files in screens (Sasha)
 - [ZBX-418] fixed possible server crash while processing macros (Sasha) 
 - [ZBX-370] fixed cpu.c for system.cpu.load[] processing (Sasha)
 - [ZBX-412] fixed malfunction of triggers based on log[] and eventlog[] (Sasha)
 - [DEV-195] added support of source ip address (Sasha)
 - added Korean locale [thnx to Kodai] (Artem)
 - updated Japanese locale [thnx to Kodai] (Artem)

Changes for 1.4.6:

 - [ZBX-404] fixed update of item "Download speed for scenario '...'" (Sasha)
 - [ZBX-389] added escaping in SQL statement in DBupdate_graph (Sasha)
 - [ZBX-286] fixed possible server crash on some platforms (Sasha)
 - [ZBX-167] fixed typo in triggers update function (Artem)
 - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
 - [ZBX-386] fixed possible agent crash in processing of active checks (Sasha)
 - [ZBX-379] added error checking for accept on server side (Sasha) 
 - [ZBX-365] added support of long process names for proc.num and proc.mem, Linux 2.6 (Sasha)
 - [ZBX-78] fixed detection of net-snmp libs (Alexei)